fixes bug 189897 "Download starts with Download Error, then Cancel Button disabled" r=adamlock sr=bzbarsky a=dbaron